2025-05-09 : fix the strucure

--- a/requirements/project/static/css/form.css
+++ b/requirements/project/static/css/form.css
@@ -1,4 +1,4 @@
-
+/* 
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
@@ -68,4 +68,4 @@ body {
 
 .form-container a:hover {
     text-decoration: underline;
-}
+} */
