--- a/requirements/project/static/css/index.css
+++ b/requirements/project/static/css/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     margin: 0;
     padding: 0;
     width: 100%;
@@ -31,4 +31,4 @@ a{
 .profile-icon a {
     border: black solid 2px;
     padding: 5px;
-}
+} */
