Fix problem of filter still redirect midl

--- a/requirements/project/templates/index.html
+++ b/requirements/project/templates/index.html
@@ -27,13 +27,18 @@
     <form action="/filterby" method="GET">
         <p>Filter:</p>
         <p>Categories :</p>
-        <input type="submit" name="filter" value="Technology">
-        <input type="submit" name="filter" value="IA">
-        <input type="submit" name="filter" value="DevOps">
-        <input type="submit" name="filter" value="Internet">
-        <input type="submit" name="filter" value="Crypto">
-        <input type="submit" name="filter" value="Machine Learning">
-        <input type="submit" name="filter" value="Backend">
+        <input type="submit" name="filter" value="Cybersecurity">
+        <input type="submit" name="filter" value="Cloud Computing & Virtualization">
+        <input type="submit" name="filter" value="Systems Programming">
+        <input type="submit" name="filter" value="IoT (Internet of Things)">
+        <input type="submit" name="filter" value="Artificial Intelligence and Machine Learning">
+        <input type="submit" name="filter" value="Data Science & Big Data">
+        <input type="submit" name="filter" value="Networking & Telecommunications">
+        <input type="submit" name="filter" value="DevOps & SRE">
+        <input type="submit" name="filter" value="Database Systems">
+        <input type="submit" name="filter" value="Reverse Engineering">
+        <input type="submit" name="filter" value="Mobile & Embedded Development">
+        <input type="submit" name="filter" value="Software Engineering">
         {{if .Authenticated}}
         <p>Additional Filters:</p>
         <label><input type="submit" name="filter" value="Owned"></label>
