--- a/requirements/project/static/css/index.css
+++ b/requirements/project/static/css/index.css
@@ -5,7 +5,8 @@
     box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -25,10 +26,14 @@ body {
     background: rgba(255, 255, 255, 0.04);
     backdrop-filter: blur(8px);
     padding: 1.2rem 2rem;
-    display: flex;
-    justify-content: flex-end;
     gap: 1rem;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .nav a {
@@ -38,6 +43,10 @@ body {
     padding: 8px 14px;
     border-radius: 20px;
     transition: background 0.3s;
+}
+
+.nav h1{
+      color: #f5d8a5;
 }
 
 .nav a:hover {
@@ -51,7 +60,7 @@ form {
     margin: 2rem auto;
     max-width: 960px;
     border-radius: 12px;
-    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
 form p {
@@ -92,7 +101,7 @@ main {
     border-radius: 12px;
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
     text-align: center;
-    margin:  0 auto;
+    margin: 0 auto;
     display: flex;
     justify-content: center;
 }
@@ -110,7 +119,7 @@ main {
 
 .post:hover {
     transform: scale(1.01);
-    box-shadow: 0 0 20px rgba(0,0,0,0.2);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
 
 .post header h2 {
