--- a/requirements/project/templates/delete.html
+++ b/requirements/project/templates/delete.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/form.css">
     <title>Forum</title>
 </head>
+
 <body>
-    {{if .Error}}
-        <div class="error-container">
-            {{.Message}}
+    <header class="nav">
+        <div id="project_header">
+            <h1><a href="/">FORUM</a></h1>
         </div>
+        <div class="container">
+            <div class="profile-icon">
+                <a href="/profile">{{.Username}}</a>
+                <a href="/logout">Logout</a>
+                <a href="/post" class="btn-primary">New Post</a>
+            </div>
+        </div>
+    </header>
+
+    {{if .Error}}
+    <div class="error-container">
+        {{.Message}}
+    </div>
     {{end}}
     <div class="form-container">
         <form method="post"> <!-- TODO blocking enter press-->
@@ -21,4 +36,5 @@
         </form>
     </div>
 </body>
+
 </html>
